demux: adaptive: add chunked transfert support

refs #17551